# transparent-overlay

./: .gitignore  DOCUMENTATION.md  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
assets/other/: demo_numpy_gif.py  hero_placeholder.py  overlay_render_pipeline.txt  test.py
examples/cases/: case_01_mouse_tracker.py  case_02_eye_break_timer.py  case_03_bouncing_balls.py  case_04_performance_monitor.py  case_05_magnifier_fisheye.py  case_06_cannon_game.py  case_07_performance_benchmark.py  case_08_brightness_controller.py  case_09_face_detection.py
examples/education/: education_01_basic_shapes.py  education_02_transparency_layers.py  education_03_text_rendering.py  education_04_context_and_manual.py  education_05_sprite_management.py  education_06_dynamic_text_sizing.py  education_07_clear_methods_demo.py  education_08_advanced_sprites.py  education_09_custom_numpy_sprite.py  education_10_ttl_cache_demo.py  education_11_no_numba_fallback.py  education_12_logger_minimal_demo.py
tests/: test_robustness.py
transparent_overlay/: __init__.py
