[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transparent-overlay"
version = "2.8.0"
authors = [
  { name = "Илья Яковенко", email = "ilya.a.yakovenko@gmail.com" },
]
description = "High-performance transparent graphics overlay for Windows"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
keywords = ["overlay", "graphics", "transparent", "windows", "gdi", "hud", "performance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "numpy>=1.19.0",
    "Pillow>=8.0.0",
    "pywin32>=300; sys_platform == 'win32'",
    "numba>=0.56.0",
]

[project.optional-dependencies]
examples = [
    "psutil>=5.8.0",
    "pyautogui>=0.9.0",
    "matplotlib>=3.10.8",
    "opencv-contrib-python>=4.5.0",
    "mss>=3.0.0",
]

[tool.setuptools]
packages = ["transparent_overlay"]